--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -77,7 +77,7 @@ jobs:
         run: npm run test -- --coverage
 
   cypress:
-    name: ⚫️ Cypress
+    name: 🌳 Cypress
     runs-on: ubuntu-latest
     steps:
       - name: ⬇️ Checkout repo
@@ -109,6 +109,31 @@ jobs:
           wait-on: http://localhost:8811
         env:
           PORT: 8811
+
+  update-database:
+    name: 🪶 Update Database
+    runs-on: ubuntu-latest
+    steps:
+      - name: ⬇️ Checkout repo
+        uses: actions/checkout@v4
+
+      - name: 🏄 Copy test env vars
+        run: cp .env.example .env
+
+      - name: ⎔ Setup node
+        uses: actions/setup-node@v4
+        with:
+          cache: npm
+          cache-dependency-path: ./package.json
+          node-version: 18
+
+      - name: 📥 Install deps
+        run: npm install
+
+      - name: 👟 Run Prisma Migrate
+        run: npx prisma migrate deploy
+        env:
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
   deploy:
     name: 🚀 Deploy
