--- a/.github/workflows/format-repo.yml
+++ b/.github/workflows/format-repo.yml
@@ -18,18 +18,23 @@ jobs:
       - name: ⬇️ Checkout repo
         uses: actions/checkout@v4
 
+      - name: ⎔ Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8
+
       - name: ⎔ Setup node
         uses: actions/setup-node@v4
         with:
-          cache: npm
+          cache: pnpm
           cache-dependency-path: ./package.json
-          node-version: 18
+          node-version: 20
 
       - name: 📥 Install deps
-        run: npm install
+        run: pnpm install
 
       - name: 👔 Format
-        run: npm run format:repo
+        run: pnpm run format:repo
 
       - name: 💪 Commit
         run: |
