fixup! Move to use pnpm better

--- a/.github/workflows/format-repo.yml
+++ b/.github/workflows/format-repo.yml
@@ -34,7 +34,7 @@ jobs:
         run: pnpm install
 
       - name: 👔 Format
-        run: pnpm run format:repo
+        run: pnpm format:repo
 
       - name: 💪 Commit
         run: |
