--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,7 +39,7 @@ jobs:
         run: pnpm install
 
       - name: 🔬 Lint
-        run: pnpm run lint
+        run: pnpm lint
 
   typecheck:
     name: ʦ TypeScript
@@ -64,7 +64,7 @@ jobs:
         run: pnpm install
 
       - name: 🔎 Type check
-        run: pnpm run typecheck --if-present
+        run: npm run typecheck --if-present
 
   vitest:
     name: ⚡ Vitest
@@ -89,7 +89,7 @@ jobs:
         run: pnpm install
 
       - name: ⚡ Run vitest
-        run: pnpm run test -- --coverage
+        run: npm run test -- --coverage
 
   cypress:
     name: 🌳 Cypress
@@ -124,12 +124,12 @@ jobs:
         run: npx prisma migrate reset --force
 
       - name: ⚙️ Build
-        run: pnpm run build
+        run: pnpm build
 
       - name: 🌳 Cypress run
         uses: cypress-io/github-action@v6
         with:
-          start: pnpm run start:mocks
+          start: pnpm start:mocks
           wait-on: http://localhost:8811
         env:
           PORT: 8811
