--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -98,8 +98,8 @@ jobs:
       - name: ⬇️ Checkout repo
         uses: actions/checkout@v4
 
-      # - name: 🏄 Copy test env vars
-      #   run: cp .env.example .env
+      - name: 🏄 Copy test env vars
+        run: cp .env.example .env
 
       - name: ⎔ Setup pnpm
         uses: pnpm/action-setup@v2
