--- a/.github/workflows/lint-repo.yml
+++ b/.github/workflows/lint-repo.yml
@@ -19,20 +19,14 @@ jobs:
       - name: ⬇️ Checkout repo
         uses: actions/checkout@v4
 
-      - name: ⎔ Setup pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: 7
-
       - name: ⎔ Setup node
         uses: actions/setup-node@v4
         with:
-          cache: pnpm
           cache-dependency-path: ./package.json
           node-version: 20
 
       - name: 📥 Install deps
-        run: pnpm install
+        run: npm install
 
       - name: 🔬 Lint
-        run: pnpm lint
+        run: npm run lint
