--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,22 +19,29 @@ jobs:
   lint:
     name: ⬣ ESLint
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [20]
     steps:
       - name: ⬇️ Checkout repo
         uses: actions/checkout@v4
 
-      - name: ⎔ Setup node
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8
+
+      - name: ⎔ Setup node ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
-          cache: npm
-          cache-dependency-path: ./package.json
-          node-version: 20
+          cache: 'pnpm'
+          node-version: ${{ matrix.node-version }}
 
       - name: 📥 Install deps
-        run: npm install
+        run: pnpm install
 
       - name: 🔬 Lint
-        run: npm run lint
+        run: pnpm lint
 
   typecheck:
     name: ʦ TypeScript
@@ -43,18 +50,22 @@ jobs:
       - name: ⬇️ Checkout repo
         uses: actions/checkout@v4
 
-      - name: ⎔ Setup node
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8
+
+      - name: ⎔ Setup node ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
-          cache: npm
-          cache-dependency-path: ./package.json
-          node-version: 20
+          cache: 'pnpm'
+          node-version: ${{ matrix.node-version }}
 
       - name: 📥 Install deps
-        run: npm install
+        run: pnpm install
 
       - name: 🔎 Type check
-        run: npm run typecheck --if-present
+        run: pnpm typecheck --if-present
 
   vitest:
     name: ⚡ Vitest
@@ -63,15 +74,19 @@ jobs:
       - name: ⬇️ Checkout repo
         uses: actions/checkout@v4
 
-      - name: ⎔ Setup node
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8
+
+      - name: ⎔ Setup node ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
-          cache: npm
-          cache-dependency-path: ./package.json
-          node-version: 20
+          cache: 'pnpm'
+          node-version: ${{ matrix.node-version }}
 
       - name: 📥 Install deps
-        run: npm install
+        run: pnpm install
 
       - name: ⚡ Run vitest
         run: npm run test -- --coverage
@@ -83,20 +98,18 @@ jobs:
       - name: ⬇️ Checkout repo
         uses: actions/checkout@v4
 
-      - name: 🏄 Copy test env vars
-        run: cp .env.example .env
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8
 
-      - name: ⎔ Setup node
+      - name: ⎔ Setup node ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
-          cache: 'npm'  # Here we use npm for caching, as GitHub Actions does not natively support pnpm caching yet.
-          cache-dependency-path: ./package.json
-          node-version: 20
+          cache: 'pnpm'
+          node-version: ${{ matrix.node-version }}
 
-      - name: 📥 Install PNPM
-        run: npm install -g pnpm
-
-      - name: 📥 Install deps using PNPM
+      - name: 📥 Install deps
         run: pnpm install
 
       - name: 🛠 Setup Database
@@ -120,18 +133,19 @@ jobs:
       - name: ⬇️ Checkout repo
         uses: actions/checkout@v4
 
-      - name: 🏄 Copy test env vars
-        run: cp .env.example .env
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8
 
-      - name: ⎔ Setup node
+      - name: ⎔ Setup node ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
-          cache: npm
-          cache-dependency-path: ./package.json
-          node-version: 20
+          cache: 'pnpm'
+          node-version: ${{ matrix.node-version }}
 
       - name: 📥 Install deps
-        run: npm install
+        run: pnpm install
 
       - name: 👟 Run Prisma Migrate
         run: npx prisma migrate deploy
