--- a/package.json
+++ b/package.json
@@ -85,7 +85,8 @@
     "vitest": "^0.34.6"
   },
   "engines": {
-    "node": ">=20.0.0"
+    "node": ">=20.0.0",
+    "pnpm": ">=8.0.0"
   },
   "prisma": {
     "seed": "ts-node -r tsconfig-paths/register prisma/seed.ts"
