--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -65,7 +65,7 @@ jobs:
         run: pnpm install
 
       - name: 🔎 Type check
-        run: pnpm typecheck --if-present
+        run: npm run typecheck --if-present
 
   vitest:
     name: ⚡ Vitest
@@ -111,6 +111,9 @@ jobs:
 
       - name: 📥 Install deps
         run: pnpm install
+
+      - name: 🏄 Copy test env vars
+        run: cp .env.example .env
 
       - name: 🛠 Setup Database
         run: npx prisma migrate reset --force
