--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -6,6 +6,7 @@
   "include": [
     "e2e/**/*",
     "support/**/*",
+    "types/**/*",
     "../node_modules/cypress",
     "../node_modules/@testing-library/cypress"
   ],
