--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -124,7 +124,7 @@ jobs:
       - name: 🌳 Cypress run
         uses: cypress-io/github-action@v6
         with:
-          start: pnpm test:e2e:run
+          start: pnpm start:mocks
           wait-on: http://localhost:8811
         env:
           PORT: 8811
