--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@testing-library/cypress": "^10.0.1",
     "@testing-library/jest-dom": "^6.1.4",
     "@types/bcryptjs": "^2.4.6",
+    "@types/cookie": "^0.5.4",
     "@types/eslint": "^8.44.7",
     "@types/node": "^18.18.9",
     "@types/react": "^18.2.37",
