--- a/.github/workflows/format-repo.yml
+++ b/.github/workflows/format-repo.yml
@@ -18,19 +18,15 @@ jobs:
       - name: ⬇️ Checkout repo
         uses: actions/checkout@v4
 
-      - name: Install pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: 8
-
       - name: ⎔ Setup node ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
-          cache: 'pnpm'
+          cache: npm
+          cache-dependency-path: ./package.json
           node-version: ${{ matrix.node-version }}
 
       - name: 📥 Install deps
-        run: pnpm install
+        run: npm install
 
       - name: 👔 Format
         run: npm run format:repo
