--- a/fly.toml
+++ b/fly.toml
@@ -3,6 +3,9 @@ kill_signal = "SIGINT"
 kill_timeout = 5
 processes = [ ]
 
+[env]
+FLY_REGION = "ord"
+
 [experimental]
 allowed_public_ports = [ ]
 auto_rollback = true
