--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "/public/build"
   ],
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
     "@prisma/client": "^5.5.2",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-icons": "^1.3.0",
     "@remix-run/css-bundle": "^2.2.0",
     "@remix-run/node": "^2.2.0",
     "@remix-run/react": "^2.2.0",
