--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -76,6 +76,9 @@ jobs:
       - name: 📥 Install deps
         run: npm install
 
+      - name: 🏄 Copy test env vars
+        run: cp .env.example .env
+
       - name: ⚡ Run vitest
         run: npm run test -- --coverage
 
