--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@remix-run/serve": "^2.2.0",
     "bcryptjs": "^2.4.3",
     "isbot": "^3.7.0",
+    "jsonwebtoken": "^9.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remix-custom-routes": "^1.0.1",
@@ -58,6 +59,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie": "^0.5.4",
     "@types/eslint": "^8.44.7",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^18.18.9",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
