new db commands

--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "db:gen": "npm run db:format && prisma generate",
     "db:format": "prisma format",
     "db:migrate": "prisma migrate dev --name \"$(date +%s)\"",
+    "db:migrate:create": "prisma migrate dev --create-only --name \"$(date +%s)\"",
+    "db:migrate:reset": "prisma migrate reset",
+    "db:migrate:reset:force": "prisma migrate reset --force",
     "db:seed": "prisma db seed",
     "db:studio": "prisma studio",
     "dev": "remix dev -c \"npm run dev:serve\"",
